CHANGE Photos to Photo

--- a/backend/src/main/resources/application-dev.yaml
+++ b/backend/src/main/resources/application-dev.yaml
@@ -15,7 +15,7 @@ spring:
 
   # Database
   datasource:
-    url: jdbc:postgresql://localhost:5432/Tropiria
+    url: jdbc:postgresql://localhost:5432/tropiria
     username: postgres
     password: Q@werty
   data:
