REMOVE username password and url from application-prod.yaml

--- a/backend/src/main/resources/application-prod.yaml
+++ b/backend/src/main/resources/application-prod.yaml
@@ -13,9 +13,9 @@ spring:
 
   # Database
   datasource:
-    url: jdbc:postgresql://localhost:5432/Tropiria
-    username: postgres
-    password: Q@werty
+    url: <url>
+    username: <username>
+    password: <password>
   data:
     jpa:
       repositories:
